--- a/style.css
+++ b/style.css
@@ -3,10 +3,26 @@
     width: 100%;
 }
 
-.keypad-sq {
-    width: 50px !important;
+.key {
     height: 50px !important;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.key-sq {
+    width: 50px !important;
+    font-size: 30px;
+}
+
+.key-circle {
+    width: 50px !important;
+    border-radius: 50%;
+    font-size: 45px;
+    color: black;
+}
+
+#equals {
+    width: 100% !important;
+    font-size: 40px;
 }
